<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusableInTouchMode="false"
    android:id="@+id/create_card_layout"
    android:focusable="false"
    android:onClick="keyBoard"
    android:background="#ffa9ff9c">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_edit"
        android:lines="@integer/textbox_lines_port"
        android:minLines="@integer/textbox_lines_port"
        android:maxLines="@integer/textbox_lines_port"
        android:layout_alignLeft="@+id/answer_edit"
        android:layout_alignStart="@+id/answer_edit"
        android:hint="@string/question_edit"
        android:gravity="top|left"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/answer_edit"
        android:lines="@integer/textbox_lines_port"
        android:maxLines="@integer/textbox_lines_port"
        android:minLines="@integer/textbox_lines_port"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/question_edit"
        android:layout_marginTop="30dp"
        android:hint="@string/answer_edit"
        android:gravity="top|left"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height_small"
        android:text="@string/add_card"
        android:id="@+id/button4"
        android:clickable="true"
        android:onClick="addCard"
        android:layout_below="@+id/answer_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_port_1"
        android:textSize="@dimen/text_size_button" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height_small"
        android:text="@string/done"
        android:id="@+id/button5"
        android:clickable="true"
        android:onClick="writeToList"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="@dimen/button_margin_port_1"
        android:textSize="@dimen/text_size_button" />
</RelativeLayout>