<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/edit_card_layout"
    android:clickable="true"
    android:onClick="editKeyBoard"
    android:background="#f2f2f2">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_edit"
        android:lines="@integer/textbox_lines_port"
        android:minLines="@integer/textbox_lines_port"
        android:maxLines="@integer/textbox_lines_port"
        android:layout_alignLeft="@+id/answer_edit"
        android:layout_alignStart="@+id/answer_edit"
        android:hint="@string/question_edit"
        android:gravity="top|left" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/answer_edit"
        android:lines="@integer/textbox_lines_port"
        android:maxLines="@integer/textbox_lines_port"
        android:minLines="@integer/textbox_lines_port"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/question_edit"
        android:layout_marginTop="30dp"
        android:hint="@string/answer_edit"
        android:gravity="top|left" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/done"
        android:id="@+id/button5"
        android:clickable="true"
        android:onClick="editCard"
        android:textSize="@dimen/text_size_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="Delete"
        android:textSize="20sp"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/answer_edit"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:onClick="deleteCard"
        android:nestedScrollingEnabled="false" />

</RelativeLayout>